--- a/css/styles.css
+++ b/css/styles.css
@@ -85,16 +85,10 @@ body {
   color: var(--accent-cl);
 }
 
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.166;
-  text-align: center;
-}
-
 .list {
   list-style: none;
 }
+/*Header*/
 .page-header {
   background-color: var(--white-bg-cl);
 }
@@ -114,7 +108,7 @@ body {
 .logo-footer {
   color: var(--white-text);
 }
-/*Header contact*/
+
 .header-contact .link {
   color: var(--second-text-cl);
   font-weight: 500;
@@ -172,23 +166,18 @@ body {
   color: var(--accent-cl);
   background-color: var(--white-text);
 }
-.portfolio-button {
-  background-color: var(--team-bg-cl);
-  border: none;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.625;
-  text-align: center;
-}
-.portfolio-button:hover,
-.portfolio-button:focus {
-  color: var(--white-text);
-  background-color: var(--accent-cl);
-}
 
 /*Принципы работы*/
+
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.166;
+  text-align: center;
+}
 .item-title {
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.143;
   text-transform: uppercase;
 }
@@ -203,21 +192,41 @@ body {
 }
 .card {
   background-color: var(--white-bg-cl);
+  text-align: center;
 }
 .team-item {
-  text-align: center;
   font-size: 16px;
   line-height: 1.186;
 }
-.team-member {
+.member {
   font-weight: 500;
 }
-.team-position {
+.position {
   color: var(--second-text-cl);
 }
 
 /*Наши работы*/
+.portfolio-button {
+  background-color: var(--team-bg-cl);
+  font-family: "Roboto", sans-serif;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+}
+.portfolio-button:hover,
+.portfolio-button:focus {
+  color: var(--white-text);
+  background-color: var(--accent-cl);
+}
+/*Карточки*/
+.work-card {
+  text-decoration: none;
+}
+
 .work-item {
+  color: var(--primary-text-cl);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
